--- a/src/index.scss
+++ b/src/index.scss
@@ -11,13 +11,11 @@ body {
   margin: 0;
   padding: 0;
   background-color: #faf9f8;
-  margin-bottom: 220px; /* Default footer height */
+  margin-bottom: 191px; /* Default footer height */
   height:100%;
 }
 
 footer {
-  padding-top:20px;
-  padding-bottom:15px;
   position: absolute;
   bottom: 0;
   width: 100%;
@@ -42,11 +40,19 @@ button:focus,
 }
 
 
+/* Align text when in mobile view */
+@media only screen and (max-width: 992px) {
+  .center-mobile {
+    text-align: center !important;
+  }
+}
+
+
 
 /* Responsive footer */
 @media only screen and (max-width: 992px) {
   body {
-    margin-bottom: 240px;
+    margin-bottom: 191px;
   }
 }
 
@@ -58,7 +64,7 @@ button:focus,
 
 @media only screen and (max-width: 767px) {
   body {
-    margin-bottom: 480px;
+    margin-bottom: 469px;
   }
 
   footer .row {
@@ -82,19 +88,19 @@ button:focus,
 
 @media only screen and (max-width: 485px) {
   body {
-    margin-bottom: 550px;
+    margin-bottom: 540px;
   }
 }
 
 @media only screen and (max-width: 363px) {
   body {
-    margin-bottom: 560px;
+    margin-bottom: 550px;
   }
 }
 
 @media only screen and (max-width: 320px) {
   body {
-    margin-bottom: 570px;
+    margin-bottom: 560px;
   }
 }
 
@@ -292,11 +298,13 @@ button:focus,
   display: inline;
 }
 
+/* This was used for Persona component without text
 .organization .ms-Persona {
   max-width: 50px;
   margin-left: auto;
   margin-right: auto;
 }
+*/
 
 .contributors .ms-Persona {
   width: 48px;
@@ -322,6 +330,7 @@ button:focus,
 
 .ms-MessageBar-text {
   display: block;
+  text-align: center;
 }
 
 /* ChoiceGroup in DegreeInformations adjustments */
