--- a/src/index.scss
+++ b/src/index.scss
@@ -26,7 +26,7 @@ main {
   min-height: 100%;
 }
 
-span {
+span { /* Texts are contained in span, so this should fix the visualization bug on some ugly browsers like Mozilla Night Basalmici Version */
   font-family: "Segoe UI Web (West European)", -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
 }
 
