--- a/src/index.scss
+++ b/src/index.scss
@@ -75,18 +75,27 @@ button:focus,
     text-align: center;
   }
 
-  footer .contacts {
-    margin-top:0px;
+  footer .ms-Toggle-innerContainer {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100px;
+  }
+
+  footer .ms-Dropdown {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 120px !important;
+  }
+
+  footer .ms-FocusZone {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 215px !important;
   }
 
   footer .contacts .text, footer .main-col .text {
     margin-left:25%;
     margin-right: 25%;
-  }
-
-  footer .text {
-    margin-left: 15%;
-    margin-right: 15%;
   }
 }
 
