--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* Main properties */
 html {
   margin: 0;
@@ -11,7 +10,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: #faf9f8;
-  margin-bottom: 191px;
+  margin-bottom: 228px;
   /* Default footer height */
   height: 100%;
 }
@@ -27,6 +26,11 @@ main {
   min-height: 100%;
 }
 
+span {
+  /* Texts are contained in span, so this should fix the visualization bug on some ugly browsers like Mozilla Night Basalmici Version */
+  font-family: "Segoe UI Web (West European)", -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
+}
+
 /* Fix bootstrap outline when click */
 a:active,
 a:focus,
@@ -39,66 +43,61 @@ button:focus,
   box-shadow: none !important;
 }
 
-/* Align text when in mobile view */
-@media only screen and (max-width: 992px) {
-  .center-mobile {
-    text-align: center !important;
+/* Responsive footer */
+@media only screen and (max-width: 1200px) {
+  body {
+    margin-bottom: 245px;
   }
 }
-/* Responsive footer */
 @media only screen and (max-width: 992px) {
   body {
-    margin-bottom: 191px;
-  }
-}
-@media only screen and (min-width: 768px) {
-  footer .mid-column {
-    margin-left: 15%;
+    margin-bottom: 366px;
   }
 }
 @media only screen and (max-width: 767px) {
   body {
-    margin-bottom: 469px;
+    margin-bottom: 610px;
   }
 
   footer .row {
     text-align: center;
   }
 
-  footer .contacts {
-    margin-top: 0px;
+  footer .ms-Toggle-innerContainer {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100px;
+  }
+
+  footer .ms-Dropdown {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 120px !important;
+  }
+
+  footer .ms-FocusZone {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 215px !important;
   }
 
   footer .contacts .text, footer .main-col .text {
     margin-left: 25%;
     margin-right: 25%;
   }
-
-  footer .text {
-    margin-left: 15%;
-    margin-right: 15%;
-  }
-}
-@media only screen and (max-width: 485px) {
-  body {
-    margin-bottom: 540px;
-  }
 }
 @media only screen and (max-width: 363px) {
   body {
-    margin-bottom: 550px;
+    margin-bottom: 610px;
   }
 }
-@media only screen and (max-width: 320px) {
-  body {
-    margin-bottom: 560px;
-  }
-}
+/*
 @media only screen and (min-width: 767px) {
   footer .row {
     margin-left: 3%;
   }
 }
+*/
 /* Responsive menu and title */
 @media only screen and (min-width: 587px) {
   header .headerRow {
@@ -137,6 +136,7 @@ button:focus,
   .header-menu .ms-Dropdown-container {
     float: right;
     width: 30px;
+    margin-right: 5px;
   }
 
   .header-menu .ms-Dropdown-caretDownWrapper {
@@ -153,16 +153,15 @@ button:focus,
 
 /* Grid system adjustments for filter container */
 @media only screen and (max-width: 766px) {
-  .courses-filter-options .col-sm-12 {
+  .groups-list .col-sm-12 {
     max-width: 450px;
     text-align: center;
   }
 }
-@media only screen and (max-width: 540px) {
-  /* Courses filter options è il container */
-  .courses-filter-options, .department-choose .row {
-    margin-right: 0%;
-    margin-left: 0%;
+/* Align text when in mobile view */
+@media only screen and (max-width: 992px) {
+  .center-mobile {
+    text-align: center !important;
   }
 }
 /* Section adjustments */
@@ -171,17 +170,12 @@ button:focus,
     max-width: 350px;
   }
 
-  .department-choose .col-sm-12 {
-    max-width: 450px;
-    text-align: center;
-  }
-
   .administrators .title {
     margin-right: 15%;
     margin-left: 15%;
   }
 
-  .courses-filter-options .col-xs-12 {
+  .groups-list .col-xs-12 {
     max-width: 350px;
     text-align: center;
   }
@@ -243,12 +237,25 @@ button:focus,
     margin-bottom: 10px !important;
   }
 }
-.rules .ms-Button-flexContainer {
-  margin: 7px;
+.courses .filters-toggle .ms-Toggle {
+  /* Fix useless margin for toggle component for filters enabled in groups section */
+  margin-bottom: 0px !important;
 }
 
-.courses .ms-Button-flexContainer {
-  margin: 5px;
+.courses .filters-toggle .ms-Label {
+  margin-left: 8px;
+  margin-right: 8px;
+}
+
+@media only screen and (max-width: 310px) {
+  /* A fix for better responsive behaviour in toggle component of groups filters section */
+  .courses .filters-toggle .ms-Label {
+    max-width: 90px;
+    margin-right: 0px;
+  }
+}
+.rules .ms-Button-flexContainer {
+  margin: 7px;
 }
 
 .header-menu .ms-Dropdown-title {
@@ -256,7 +263,7 @@ button:focus,
   padding: 0;
 }
 
-.ms-List {
+.additional-groups .ms-List, .course-list .ms-List {
   /* Padding for card-list in courses and additionalGroups sections */
   padding: 3px;
 }
@@ -282,7 +289,7 @@ button:focus,
 }
 
 .MuiChip-label {
-  font-family: "Segoe UI", "Segoe UI Web (West European)", "Segoe UI", -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
+  font-family: "Segoe UI Web (West European)", -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
   font-size: 11px;
 }
 
@@ -304,18 +311,18 @@ button:focus,
   text-align: center;
 }
 
-/* ChoiceGroup in DegreeInformations adjustments */
-.degree-informations .ms-ChoiceField-field:hover::before,
-.degree-informations .ms-ChoiceField-field:focus::before {
+/* ChoiceGroup adjustments to not show hover effect */
+.degree-informations .ms-ChoiceField-field:hover::before, .university-links .ms-ChoiceField-field:hover::before,
+.degree-informations .ms-ChoiceField-field:focus::before, .university-links .ms-ChoiceField-field:focus::before {
   opacity: 0;
 }
 
-.degree-informations .ms-ChoiceField-field:hover::after,
-.degree-informations .ms-ChoiceField-field:focus::after {
+.degree-informations .ms-ChoiceField-field:hover::after, .university-links .ms-ChoiceField-field:hover::after .degree-informations .ms-ChoiceField-field:focus::after,
+.university-links .ms-ChoiceField-field:focus::after {
   opacity: 0;
 }
 
-.degree-informations .ms-ChoiceField-labelWrapper {
+.degree-informations .ms-ChoiceField-labelWrapper, .university-links .ms-ChoiceField-labelWrapper {
   overflow: visible;
 }
 
@@ -324,6 +331,12 @@ button:focus,
   justify-content: center;
 }
 
+@media only screen and (max-width: 768px) {
+  .university-links .ms-ChoiceFieldGroup-flexContainer {
+    display: flex;
+    justify-content: center;
+  }
+}
 /* Dialog component adjustments */
 .ms-Dialog-main {
   margin-left: 10px;
@@ -341,4 +354,25 @@ button:focus,
 header .ms-Image-image {
   display: inline;
   margin-bottom: 9px !important;
+}
+
+/* Fix searchBox visualization for small height displays */
+@media only screen and (max-height: 610px) {
+  #SuggestionContainer .ms-Callout-main {
+    max-height: 200px !important;
+  }
+}
+@media only screen and (max-height: 500px) {
+  #SuggestionContainer .ms-Callout-main {
+    max-height: 150px !important;
+  }
+}
+@media only screen and (max-height: 410px) {
+  #SuggestionContainer .ms-Callout-main {
+    max-height: 100px !important;
+  }
+}
+/* Footer adjustments */
+footer .ms-Label {
+  padding-top: 0px;
 }
