--- a/src/index.scss
+++ b/src/index.scss
@@ -368,6 +368,7 @@ button:focus,
 .ms-Dialog-main {
   margin-left: 10px;
   margin-right: 10px;
+  max-width: 400px !important;
 }
 
 @media only screen and (max-width: 480px) {
