--- a/src/index.css
+++ b/src/index.css
@@ -107,8 +107,8 @@ button:focus,
 }
 @media only screen and (max-width: 586px) {
   header .headerRow {
-    margin-left: 0.5rem !important;
-    margin-right: 0.25rem !important;
+    margin-left: 15px !important;
+    margin-right: 15px !important;
     margin-bottom: 0 !important;
   }
 
@@ -116,8 +116,10 @@ button:focus,
     display: none;
   }
 
-  .header-menu .dropdown {
-    display: block;
+  .header-col {
+    justify-content: right;
+    display: flex;
+    align-items: center;
   }
 
   .header-menu .ms-Dropdown-title {
@@ -156,6 +158,11 @@ button:focus,
   }
 }
 /* Section adjustments */
+@media only screen and (max-width: 350px) {
+  .ms-Panel-headerText {
+    font-size: 21px !important;
+  }
+}
 @media only screen and (max-width: 575px) {
   .organization .col-12, .contributors .col-12 {
     max-width: 350px;
@@ -332,6 +339,7 @@ button:focus,
 .ms-Dialog-main {
   margin-left: 10px;
   margin-right: 10px;
+  max-width: 400px !important;
 }
 
 @media only screen and (max-width: 480px) {
@@ -345,6 +353,19 @@ button:focus,
 header .ms-Image-image {
   display: inline;
   margin-bottom: 9px !important;
+}
+
+.header-panel {
+  /*
+  .ms-Panel-content {
+    height: 90vh;
+    display: flex;
+    align-items: center;
+  }
+  */
+}
+.header-panel .ms-Panel-main {
+  width: 80%;
 }
 
 /* Fix searchBox visualization for small height displays */
@@ -366,4 +387,15 @@ header .ms-Image-image {
 /* Footer adjustments */
 footer .ms-Label {
   padding-top: 0px;
+}
+
+/* Fix image being cut */
+.home .ms-Image {
+  overflow: visible;
+}
+
+@media only screen and (max-width: 350px) {
+  .first-section img {
+    width: 120px;
+  }
 }
