--- a/src/index.css
+++ b/src/index.css
@@ -399,3 +399,11 @@ footer .ms-Label {
     width: 120px;
   }
 }
+/* Some services adjustments */
+.services .ms-Card {
+  align-items: stretch !important;
+}
+
+.services .ms-DocumentCardPreview, .services .ms-DocumentCardPreview-iconContainer {
+  min-height: 100%;
+}
