--- a/src/index.scss
+++ b/src/index.scss
@@ -261,7 +261,7 @@ button:focus,
   }
 }
 
-.groups .filters-toggle .ms-Toggle { /* Fix useless margin for toggle component for filters enabled in groups section */
+.groups-list .filters-toggle .ms-Toggle { /* Fix useless margin for toggle component for filters enabled in groups section */
   margin-bottom: 0px !important;
 }
 
