--- a/styles/index.scss
+++ b/styles/index.scss
@@ -384,16 +384,15 @@ header .ms-Image-image {
 
 .header-panel {
   .ms-Panel-main {
-    width: 80%;
-  }
 
-  /*
-  .ms-Panel-content {
-    height: 90vh;
-    display: flex;
-    align-items: center;
+    @media only screen and (max-width: 500px) {
+      width: 80%;
+    }
+
+    @media only screen and (min-width: 501px) {
+      width: 60%;
+    }
   }
-  */
 }
 
 /* Fix searchBox visualization for small height displays */
