SEO Images and last icons replace

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -460,3 +460,9 @@ footer .ms-Label {
     background-color: #bbbbbb;
   }
 }
+
+.degree .admin-list {
+  .ms-Persona-imageArea .ms-Image {
+    background-color: #bbbbbb;
+  }
+}
