--- a/styles/index.scss
+++ b/styles/index.scss
@@ -28,7 +28,7 @@ main {
 
 /* Fix the visualization bug on some ugly browsers like Mozilla Night Basalmici Version */
 span {
-  font-family: "Segoe UI Web (West European)", -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
+  font-family: "Segoe UI", "Segoe UI Web (West European)", "Segoe UI", -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
 }
 
 /* Fix bootstrap outline when click */
@@ -95,7 +95,6 @@ svg {
   }
 }
 
-
 @media only screen and (max-width: 363px) {
   body {
     margin-bottom: $footer-height + 381px;
@@ -105,11 +104,6 @@ svg {
 
 /* Responsive menu and title */
 @media only screen and (min-width: 769px) { // TODO: Restore 587px when lib-commonjs is updated
-  header .headerRow {
-    margin-left: 1rem!important;
-    margin-right: 1rem !important;
-    margin-bottom: 0 !important;
-  }
   .header-menu .pivot {
     display: block;
   }
@@ -120,10 +114,8 @@ svg {
 }
 
 @media only screen and (max-width: 768px) { // TODO: Restore 586px when lib-commonjs is updated
-  header .headerRow {
-    margin-left: 15px !important;
-    margin-right: 15px !important;
-    margin-bottom: 0 !important;
+  .header-menu .dropdown {
+    display: flex;
   }
 
   .header-menu .pivot {
@@ -135,31 +127,6 @@ svg {
     display: flex;
     align-items: center;
   }
-
-  .header-menu .ms-Dropdown-title {
-    display: none;
-  }
-
-  .header-menu .ms-Dropdown-container {
-    float:right;
-    width:30px;
-    margin-right: 5px;
-  }
-
-  .header-menu .ms-Dropdown-caretDownWrapper {
-    right: 6px;
-  }
-}
-
-
-
-
-/* Dropdown style for header-menu */
-.header-menu .ms-Dropdown-title { 
-  border-style: none;
-  height: 44px;
-  justify-content: center;
-  text-align: center;
 }
 
 
@@ -202,13 +169,13 @@ svg {
     text-align: center;
   }
 
-  .representatives .people-list .col-xs-12, .groups .admin-list .col-xs-12 {
-    margin-left:15%;
+  .university .people-list .col-xs-12, .degree .admin-list .col-xs-12 {
+    margin-left: 15%;
     max-width: 250px;
     text-align: center;
   }
 
-  .representatives .people-list, .groups .admin-list {
+  .university .people-list, .degree .admin-list {
     justify-content: center;
   }
 
@@ -270,13 +237,13 @@ svg {
   margin-bottom: 0px !important;
 }
 
-.groups .filters-toggle .ms-Label {
+.degree .filters-toggle .ms-Label {
   margin-left: 8px;
   margin-right: 8px;
 }
 
 @media only screen and (max-width: 310px) { /* A fix for better responsive behaviour in toggle component of groups filters section */
-  .groups .filters-toggle .ms-Label {
+  .degree .filters-toggle .ms-Label {
     max-width: 90px; 
     margin-right: 0px;
   }
@@ -302,14 +269,6 @@ svg {
 .ms-TooltipHost { /* For showing tooltip correctly on settings icon */
   display: inline;
 }
-
-/* This was used for Persona component without text
-.organization .ms-Persona {
-  max-width: 50px;
-  margin-left: auto;
-  margin-right: auto;
-}
-*/
 
 .contributors .ms-Persona {
   width: 48px;
@@ -381,15 +340,9 @@ svg {
   }
 }
 
-/* Header Adjustments */
-header .ms-Image-image {
-  display: inline;
-  margin-bottom: 9px !important;
-}
-
+/* Header Panel Adjustments */
 .header-panel {
   .ms-Panel-main {
-
     @media only screen and (max-width: 500px) {
       width: 80%;
     }
@@ -400,7 +353,7 @@ header .ms-Image-image {
   }
 }
 
-/* Fix searchBox visualization for small height displays */
+/* Fix SearchBox visualization for small height displays */
 @media only screen and (max-height: 610px) {
   #SuggestionContainer .ms-Callout-main {
     max-height: 200px !important;
@@ -419,7 +372,7 @@ header .ms-Image-image {
   }
 }
 
-/* Footer adjustments */
+/* Footer label adjustments */
 footer .ms-Label {
   padding-top: 0px;
 }
@@ -450,19 +403,15 @@ footer .ms-Label {
   align-items: center;
 }
 
-/* Fix avatar images not loading */
+/* Fix avatar images not loading; TODO: Remove when fluent ui fixes this */
 .organization {
-  .ms-Image-image {
-    opacity: 1;
-  }
-
   .ms-Persona-imageArea .ms-Image {
-    background-color: #bbbbbb;
+    background-color: #d1d0d0;
   }
 }
 
 .degree .admin-list {
   .ms-Persona-imageArea .ms-Image {
-    background-color: #bbbbbb;
+    background-color: #d1d0d0;
   }
 }
