--- a/styles/index.scss
+++ b/styles/index.scss
@@ -422,3 +422,8 @@ footer .ms-Label {
     background-color: #d1d0d0;
   }
 }
+
+/* Group-item button padding adjustments */
+.group-item .ms-Button {
+  padding: 0px 8px;
+}
