--- a/styles/index.scss
+++ b/styles/index.scss
@@ -227,6 +227,13 @@ svg {
   Additional properties
 ---------------------*/
 
+.line-clamp {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  white-space: normal;
+}
+
 @media only screen and (max-width: 640px) { /* Dropdown items in mobile visualization when using icons act buggy. Must create issue in fluentUi repo */
   .ms-Dropdown-item {
     margin-bottom: 10px !important;
@@ -414,4 +421,9 @@ footer .ms-Label {
   .ms-Persona-imageArea .ms-Image {
     background-color: #d1d0d0;
   }
+}
+
+/* Group-item button padding adjustments */
+.group-item .ms-Button {
+  padding: 0px 8px;
 }
