PrimaryButton on AdditionalGroup component

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -424,6 +424,6 @@ footer .ms-Label {
 }
 
 /* Group-item button padding adjustments */
-.group-item .ms-Button {
+.group-item .ms-Button, .additional-group-item .ms-Button {
   padding: 0px 8px;
 }
