--- a/styles/index.scss
+++ b/styles/index.scss
@@ -102,7 +102,7 @@ svg {
 
 
 /* Responsive menu and title */
-@media only screen and (min-width: 786px) { // TODO: Restore 587px
+@media only screen and (min-width: 587px) {
   .header-menu .pivot {
     display: block;
   }
@@ -112,19 +112,13 @@ svg {
   }
 }
 
-@media only screen and (max-width: 785px) { // TODO: Restore 586px
+@media only screen and (max-width: 586px) { 
   .header-menu .dropdown {
     display: flex;
   }
 
   .header-menu .pivot {
     display: none;
-  }
-
-  .header-col {
-    justify-content: right;
-    display: flex;
-    align-items: center;
   }
 }
 
@@ -262,11 +256,6 @@ svg {
 .rules ul {
   margin-top: 10px;
   margin-bottom: 0px;
-}
-
-.header-menu .ms-Dropdown-title {
-  line-height: 45px;
-  padding:0;
 }
 
 .additional-groups .ms-List, .course-list .ms-List { /* Padding for card-list in groups and additionalGroups sections */
@@ -423,4 +412,17 @@ footer .ms-Label {
 /* Group-item button padding adjustments */
 .group-item .ms-Button, .additional-group-item .ms-Button {
   padding: 0px 8px;
+}
+
+/* Fix avatar images not loading; TODO: Remove when I understand what is happening with ssr */
+.organization {
+  .ms-Persona-imageArea .ms-Image {
+    background-color: #d1d0d0;
+  }
+}
+
+.degree .admin-list {
+  .ms-Persona-imageArea .ms-Image {
+    background-color: #d1d0d0;
+  }
 }
