--- a/styles/index.scss
+++ b/styles/index.scss
@@ -12,7 +12,7 @@ body {
   margin: 0;
   padding: 0;
   margin-bottom: $footer-height;
-  height:100%;
+  min-height:100%;
 }
 
 footer {
@@ -102,7 +102,7 @@ svg {
 
 
 /* Responsive menu and title */
-@media only screen and (min-width: 769px) { // TODO: Restore 587px when lib-commonjs is updated
+@media only screen and (min-width: 587px) {
   .header-menu .pivot {
     display: block;
   }
@@ -112,19 +112,13 @@ svg {
   }
 }
 
-@media only screen and (max-width: 768px) { // TODO: Restore 586px when lib-commonjs is updated
+@media only screen and (max-width: 586px) { 
   .header-menu .dropdown {
     display: flex;
   }
 
   .header-menu .pivot {
     display: none;
-  }
-
-  .header-col {
-    justify-content: right;
-    display: flex;
-    align-items: center;
   }
 }
 
@@ -264,11 +258,6 @@ svg {
   margin-bottom: 0px;
 }
 
-.header-menu .ms-Dropdown-title {
-  line-height: 45px;
-  padding:0;
-}
-
 .additional-groups .ms-List, .course-list .ms-List { /* Padding for card-list in groups and additionalGroups sections */
   padding: 3px;
 }
@@ -283,11 +272,6 @@ svg {
 
 .contributors .ms-Persona {
   width: 48px;
-}
-
-.MuiChip-label {
-  font-family: "Segoe UI Web (West European)", -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
-  font-size: 11px;
 }
 
 .organization .ms-Card {
@@ -420,7 +404,12 @@ footer .ms-Label {
   align-items: center;
 }
 
-/* Fix avatar images not loading; TODO: Remove when fluent ui fixes this */
+/* Group-item button padding adjustments */
+.group-item .ms-Button, .additional-group-item .ms-Button {
+  padding: 0px 8px;
+}
+
+/* Fix avatar images not loading; TODO: Remove when I understand what is happening with ssr */
 .organization {
   .ms-Persona-imageArea .ms-Image {
     background-color: #d1d0d0;
@@ -431,9 +420,4 @@ footer .ms-Label {
   .ms-Persona-imageArea .ms-Image {
     background-color: #d1d0d0;
   }
-}
-
-/* Group-item button padding adjustments */
-.group-item .ms-Button, .additional-group-item .ms-Button {
-  padding: 0px 8px;
 }
