--- a/styles/index.scss
+++ b/styles/index.scss
@@ -8,12 +8,12 @@ html {
 body {
   margin: 0;
   padding: 0;
-  min-height:100%;
 }
 
 .App {
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
 }
 
 section {
