--- a/styles/index.scss
+++ b/styles/index.scss
@@ -42,6 +42,13 @@ svg {
   vertical-align: unset;
 }
 
+/* Responsive variant "mega" of text */
+@media only screen and (max-width: 767px) {
+  .text-mega * {
+    font-size: 42px !important;
+  }
+}
+
 /* Responsive footer */
 @media only screen and (max-width: 767px) {
   footer .row {
